--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,71 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+h1 {
+	color: #008080;
+}
+
+h2 {
+	color: #FFD700;
+}
+
+body {
+	text-align: center;
+}
+nav {
+	background-color: #808080;
+}
+
+nav a {
+	background-color: #ffbf00;
+	color:white;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+nav a:hover { 
+    background-color: #ee5f3c;
+}
+
+
+
+h1 h2 p footer {
+	text-align: center;
+}
+
+.card {
+	height: 200px;
+	width: 150px;
+	background-color: #ffff00;
+	border: 1px solid #000000;
+	border-radius: 10px;
+	float: left;
+  	display: block;
+  	margin: 0 10px 50px 50px;
+  	padding: 5px;
+  	cursor: pointer;
+	
+}
+
+.board {
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+	float:left;
+	margin: 8%;
+}
+
+.name {
+	color: #ff0000;
+}
+footer {
+	background-color: #808080;
+	clear: both;
+}
+
+.clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+      }
